[iOS] Fix how the tab grid is notified of OTR tab model changes.

This Cl fixes two problems that can occur when the OTR tab model is
replaced.

First, when the last incognito tab is closed, the tab grid should
have its OTR tab model set to nil so it can stop observing the OTR
web state list.

Second, MainController should set _tabSwitcher to be the TabGridAdaptor
as soon as its created, not when the tab switcher is displayed.

This CL also has the TabGridCoordinator stop keeping pointers to tab
models after it has created mediators.

Bug: 831594
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I61f674bde5d2a64645b8ccb7ed1129b6801eddcc
Reviewed-on: https://chromium-review.googlesource.com/1010288
Reviewed-by: Rohit Rao <rohitrao@chromium.org>
Commit-Queue: Mark Cogan <marq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550543}
Former-commit-id: 48c7dbdfe4928acd61a186a36428583a9b3e99d4